--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }}</title>
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/dobruvane.css">
+    <link href="{{ site.baseurl }}/assets/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/dobruvane.css">
   </head>
   <body>
     <div style="display: flex; flex-direction: column; min-height: 100vh;">
@@ -16,6 +16,6 @@
     {% include footer.html %}    
 
 </div>
-    <script src="/assets/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="{{ site.baseurl }}/assets/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
