--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <div class="d-flex flex-row align-items-center">
-            <img class="logo" src="/assets/images/dobruvane-logo.png">
+            <img class="logo" src="{{ site.baseurl }}/assets/images/dobruvane-logo.png">
             <div>Добруване с Ясмина Тал</div>
         </div>
       </a>
