--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,39 +6,49 @@
       <a class="navbar-brand" href="#">
         <div class="d-flex flex-row align-items-center">
             <img class="logo" src="{{ site.baseurl }}/assets/images/dobruvane-logo.png">
-            <div>Добруване с Ясмина Тал</div>
+            <div class="logo-title">Добруване с Ясмина Тал</div>
         </div>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Начало</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">За мен</a>
-          </li>          
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <div class="d-flex flex-column w-100 align-items-end">
+          
+          <!-- First row -->
+          <ul class="navbar-nav flex-column flex-lg-row mb-1">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Начало</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">За мен</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Инструменти за Добруване
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Съкровищница на мъдростта</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Свържете се е мен</a>
-        </li>   
-        </ul>
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+      
+          <!-- Second row -->
+          <ul class="navbar-nav flex-column flex-lg-row">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Съкровищница на мъдростта</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Свържете се е мен</a>
+            </li>
+          </ul>
+      
+        </div>
       </div>
+      
     </div>
   </nav>
 
