--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,8 @@
         </div>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <!--<span class="navbar-toggler-icon"></span>-->
+        {% include hamburger.html %}
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="d-flex flex-column w-100 align-items-end">
